--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
 
     <div class="menu-container">
-        <h2>Unidad 3</h2>
+        <h2>WEeb App</h2>
         <ul>
             <li><a href="https://l20660067.github.io/Actividad1-Unidad3/">Actividad 1</a></li>
             <li><a href="https://l20660067.github.io/Actividad2-Unidad3/">Actividad 2</a></li>
@@ -74,7 +74,7 @@
             <li><a href="https://l20660067.github.io/actividad9u3/">Actividad 9</a></li>
         </ul>
 
-        <h2>Unidad 3</h2>
+        <h2>Web App</h2>
         <ul>
             <li><a href="https://l20660067.github.io/actividad1U3/">Actividad 1</a></li>
             <li><a href="https://l20660067.github.io/actividad3-U3/">Actividad 3</a></li>
